--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -62,7 +62,7 @@
   text-transform: capitalize;
 }
 //bottom border for header
-.header--border {
+.header-border {
   border-bottom: 1px solid $borderNavColor;
 }
 //nav element active
